--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
                     <div class="button">
                         <div class="buttonsCircle">
-                            <div class="buttons text">7</div>
+                            <div class="buttons text number">7</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">8</div>
+                            <div class="buttons text number">8</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">9</div>
+                            <div class="buttons text number">9</div>
                         </div>
                         <div class="buttonsCircle diff">
                             <div class="buttons p0 operation"><img src="multiply.svg" alt="multiply"></div>
@@ -49,13 +49,13 @@
 
                     <div class="button">
                         <div class="buttonsCircle">
-                            <div class="buttons text">4</div>
+                            <div class="buttons text number">4</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">5</div>
+                            <div class="buttons text number">5</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">6</div>
+                            <div class="buttons text number">6</div>
                         </div>
                         <div class="buttonsCircle diff">
                             <div class="buttons p0 operation"><img src="subtraction.svg" alt="minus"></div>
@@ -64,13 +64,13 @@
 
                     <div class="button">
                         <div class="buttonsCircle">
-                            <div class="buttons text">1</div>
+                            <div class="buttons text number">1</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">2</div>
+                            <div class="buttons text number">2</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">3</div>
+                            <div class="buttons text number">3</div>
                         </div>
                         <div class="buttonsCircle diff">
                             <div class="buttons p0 operation"><img src="plus.svg" alt="add"></div>
@@ -82,7 +82,7 @@
                             <div class="buttons p0"><img src="plus_minus.svg" alt="plus_minus"></div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">0</div>
+                            <div class="buttons text number">0</div>
                         </div>
                         <div class="buttonsCircle">
                             <div class="buttons text">.</div>
