Added clear functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="buttonsGrid">
                     <div class="button">
                         <div class="buttonsCircle diff">
-                            <div class="buttons text red">C</div>
+                            <div class="buttons text red cancel">C</div>
                         </div>
                         <div class="buttonsCircle diff">
                             <div class="buttons text bracket">()</div>
