some basic changes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                             <div class="buttons text bracket">()</div>
                         </div>
                         <div class="buttonsCircle diff">
-                            <div class="buttons p0 operation"><img src="percent.svg" alt="percent"></div>
+                            <div class="buttons p0 operation"><img src="/img/percent.svg" alt="percent"></div>
                         </div>
                         <div class="buttonsCircle diff">
-                            <div class="buttons p0 operation"><img src="divide.svg" alt="divide"></div>
+                            <div class="buttons p0 operation"><img src="/img/divide.svg" alt="divide"></div>
                         </div>
                     </div>
 
@@ -43,7 +43,7 @@
                             <div class="buttons text number">9</div>
                         </div>
                         <div class="buttonsCircle diff">
-                            <div class="buttons p0 operation"><img src="multiply.svg" alt="multiply"></div>
+                            <div class="buttons p0 operation"><img src="/img/multiply.svg" alt="multiply"></div>
                         </div>
                     </div>
 
@@ -58,7 +58,7 @@
                             <div class="buttons text number">6</div>
                         </div>
                         <div class="buttonsCircle diff">
-                            <div class="buttons p0 operation"><img src="subtraction.svg" alt="minus"></div>
+                            <div class="buttons p0 operation"><img src="/img/subtraction.svg" alt="minus"></div>
                         </div>
                     </div>
 
@@ -73,13 +73,13 @@
                             <div class="buttons text number">3</div>
                         </div>
                         <div class="buttonsCircle diff">
-                            <div class="buttons p0 operation"><img src="plus.svg" alt="add"></div>
+                            <div class="buttons p0 operation"><img src="/img/plus.svg" alt="add"></div>
                         </div>
                     </div>
 
                     <div class="button">
                         <div class="buttonsCircle">
-                            <div class="buttons p0"><img src="plus_minus.svg" alt="plus_minus"></div>
+                            <div class="buttons p0"><img src="/img/plus_minus.svg" alt="plus_minus"></div>
                         </div>
                         <div class="buttonsCircle">
                             <div class="buttons text number">0</div>
@@ -88,7 +88,7 @@
                             <div class="buttons text">.</div>
                         </div>
                         <div class="buttonsCircle  green">
-                            <div class="buttons p0 operation"><img src="equal.svg" alt="equal"></div>
+                            <div class="buttons p0 operation"><img src="/img/equal.svg" alt="equal"></div>
                         </div>
                     </div>
                 </div>
