Just added the eraser button to the calculator

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div class="screen">
                     <div class="numbers"></div>
                     <div class="solution"></div>
+                    <div class="erase"><img style="filter: invert(1);" src="/img/erase.svg" alt="eraser"></div>
                 </div>
 
                 <div class="buttonsGrid">
