Working on decimal logic

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="buttons text number">0</div>
                         </div>
                         <div class="buttonsCircle">
-                            <div class="buttons text">.</div>
+                            <div class="buttons text decimal">.</div>
                         </div>
                         <div class="buttonsCircle  green">
                             <div class="buttons p0 operation"><img src="/img/equal.svg" alt="equal"></div>
