Working on plus_minus logic

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     <div class="button">
                         <div class="buttonsCircle">
-                            <div class="buttons p0"><img src="/img/plus_minus.svg" alt="plus_minus"></div>
+                            <div class="buttons p0 plus_minus"><img src="/img/plus_minus.svg" alt="plus_minus"></div>
                         </div>
                         <div class="buttonsCircle">
                             <div class="buttons text number">0</div>
